--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
-{
+
+
+{ "homepage": "https://codedbyjigme.github.io/TodoFlow",
   "name": "my-todo-list-app",
   "version": "0.1.0",
   "private": true,
@@ -16,6 +18,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -36,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
